# local-llm-server

./: .gitignore  README.md  deploy.sh  example_server.py  inference_results_report.json  inference_test_config.json  llama_cpp_server_guide.md  pyproject.toml  release.sh  setup.py  test_inference.py
.github/workflows/: ci.yml  release.yml
archive/: README.md  analisi_generalizzazione_server_llm.md  example_mlx_server.py  example_server.py  llama_cpp_server.py
docs/: project-readme.md
src/local_llm_server/: __init__.py  __main__.py  audio.py  cli.py  client.py  config.py  downloader.py  engine.py  model_sources.py  models_registry.yaml  process.py  registry.py  runtime.py  server.py  vision.py
src/local_llm_server/static/: app.js  components.js  config.js  demo-data.js  i18n.js  index.html  styles.css  tour.css  tour.js
tests/: test_app_factory.py  test_audio.py  test_client.py  test_config_multimodal.py  test_engine_llama_server.py  test_engine_mlx_vlm_server.py  test_import_safety.py  test_model_sources.py  test_process.py  test_registry_validation.py  test_runtime.py  test_server_messages.py  test_server_multimodel.py  test_vision.py
