[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-server"
version = "0.3.7"
description = "Self-contained local LLM server with OpenAI-compatible API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "local-llm-server contributors" }]

dependencies = [
    "llama-cpp-python>=0.3.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff"]
mlx = ["mlx-lm>=0.31.0"]
vision = ["mlx-vlm>=0.6.4,<0.7.0"]
audio = ["soundfile>=0.12.0", "numpy>=1.24.0"]

[project.scripts]
local-llm = "local_llm_server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
local_llm_server = ["models_registry.yaml", "static/*"]
